# nix-registry

./: flake.nix
nixos-configurations/: configuration.nix  default.nix  flake.nix
nixos-configurations/HYDN-BEDROOM/: configuration.nix  default.nix
nixos-configurations/imports/users/hydn/home/: home.nix
nixos-configurations/imports/users/hydn/home/bash/: default.nix
nixos-configurations/imports/users/hydn/home/git/: default.nix
nixos-configurations/imports/users/hydn/home/neovim/: default.nix
nixos-configurations/wsl/: default.nix
nixos-configurations/wsl-configs/: default.nix  hostNames.nix
nixos-configurations/wsl/imports/users/hydn/: default.nix
nixos-configurations/wsl/imports/users/hydn/home/: home.nix
nixos-modules/: default.nix
nixos-modules/wsl/: configuration.nix
nixos-modules/wsl/imports/users/hydn/: default.nix
nixos-modules/wsl/imports/users/nixos/: default.nix
nixos-modules/wsl/imports/users/nixos/home/: home.nix
templates/: default.nix
templates/cpp-cmake/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  default.nix  flake.nix  shell.nix  vcpkg.json
templates/cpp-cmake/sources/: CMakeLists.txt
templates/cpp-cmake/sources/apps/myapp/: CMakeLists.txt
templates/cpp-cmake/sources/apps/myapp/include/: greeter.hpp
templates/cpp-cmake/sources/apps/myproject/: CMakeLists.txt
templates/cpp-cmake/sources/apps/myproject/src/: greeter.cpp  main.cpp
templates/cpp-cmake/sources/mylib/: CMakeLists.txt
templates/cpp-cmake/sources/mylib/include/mylib/: example.hpp
templates/cpp-cmake/sources/mylib/src/: example.cpp
(+9 files in other folders)
